; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libc/stdio/extr_printf-pos.c_addtype.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libc/stdio/extr_printf-pos.c_addtype.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.typetable = type { i32*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.typetable*, i32)* @addtype to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @addtype(%struct.typetable* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.typetable*, align 8
  %5 = alloca i32, align 4
  store %struct.typetable* %0, %struct.typetable** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load %struct.typetable*, %struct.typetable** %4, align 8
  %7 = call i64 @_ensurespace(%struct.typetable* %6)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %10

9:                                                ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %21

10:                                               ; preds = %2
  %11 = load i32, i32* %5, align 4
  %12 = load %struct.typetable*, %struct.typetable** %4, align 8
  %13 = getelementptr inbounds %struct.typetable, %struct.typetable* %12, i32 0, i32 0
  %14 = load i32*, i32** %13, align 8
  %15 = load %struct.typetable*, %struct.typetable** %4, align 8
  %16 = getelementptr inbounds %struct.typetable, %struct.typetable* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 8
  %18 = add nsw i32 %17, 1
  store i32 %18, i32* %16, align 8
  %19 = sext i32 %17 to i64
  %20 = getelementptr inbounds i32, i32* %14, i64 %19
  store i32 %11, i32* %20, align 4
  store i32 0, i32* %3, align 4
  br label %21

21:                                               ; preds = %10, %9
  %22 = load i32, i32* %3, align 4
  ret i32 %22
}

declare dso_local i64 @_ensurespace(%struct.typetable*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
